--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -489,8 +489,6 @@ jobs:
           }
           
           $containerAppUrl = "https://$containerAppFqdn"
-          Write-Host "Container App FQDN: $containerAppFqdn"
-          Write-Host "Container App URL: $containerAppUrl"
           "CONTAINER_APP_URL=$containerAppUrl" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
           "ApplicationBaseUrl=$containerAppUrl" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
           
@@ -500,9 +498,12 @@ jobs:
             --resource-group ${{ vars.TDD_RESOURCE_GROUP_NAME}} `
             --query "properties.template.containers[0].env[?name=='ConnectionStrings__SqlConnectionString'].value" `
             -o tsv
-          Write-Host "Container App Connection String retrieved: $([string]::IsNullOrWhiteSpace($containerAppConnectionString))"
           "ConnectionStrings__SqlConnectionString=$containerAppConnectionString" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
           "CONTAINER_APP_CONNECTION_STRING=$containerAppConnectionString" | Out-File -FilePath $env:GITHUB_ENV -Append -Encoding utf8
+
+          Write-Host "Container App FQDN: $containerAppFqdn"
+          Write-Host "Container App URL: $containerAppUrl"
+          Write-Host "Container App Connection String retrieved: $(![string]::IsNullOrWhiteSpace($containerAppConnectionString))"
 
       - name: Run Acceptance tests
         if: success()
