--- a/.github/workflows/integration-build-feature-branches.yml
+++ b/.github/workflows/integration-build-feature-branches.yml
@@ -1,10 +1,10 @@
-name: Integration Build
+name: Integration Build - Branch
 run-name: "1.3.${{ github.run_number }} • ${{ github.event.pull_request.title != '' && github.event.pull_request.title || github.head_ref || github.ref_name }}"
 on:
   push:
-    branches: ['master', 'main']
+    branches-ignore: ['master', 'main']
   pull_request:
-    branches: ['master', 'main']
+    branches-ignore: ['master', 'main']
   workflow_dispatch:
 env:
   MAJOR_VERSION: 1
@@ -577,80 +577,3 @@ jobs:
           name: acceptance-test-results-tdd
           path: build/test/AcceptanceTests/**/*.trx
           retention-days: 30 
-
-
-  deploy-to-uat:
-    name: UAT
-    needs: [deploy-to-tdd]
-    if: success() 
-    runs-on: ubuntu-latest
-    environment:
-      name: UAT
-    
-    steps:
-      - name: Set Version
-        run: |
-          version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ github.run_number }}"
-          echo "BUILD_BUILDNUMBER=$version" >> $GITHUB_ENV
-          echo "VERSION=$version" >> $GITHUB_ENV
-          echo "Build version: $version"
-
-      - name: Deploy Octopus Release to UAT
-        uses: OctopusDeploy/deploy-release-action@v3
-        id: start-deploy-to-uat
-        env:
-          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY }}
-          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
-          OCTOPUS_SPACE: ${{ vars.OCTOPUS_SPACE }}
-        with:
-          project: ${{ vars.OCTOPUS_PROJECT }}   
-          release_number: ${{ env.BUILD_BUILDNUMBER }}
-          environments: "UAT"
-
-      - name: Wait for the UAT deployment to complete
-        uses: OctopusDeploy/await-task-action@v3
-        env:
-          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY  }}
-          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
-          OCTOPUS_SPACE: ${{ vars.OCTOPUS_SPACE }}
-        with:
-          server_task_id: ${{ fromJson(steps.start-deploy-to-uat.outputs.server_tasks)[0].serverTaskId }}
-          timeout_after: 1800          
-          
-  deploy-to-prod:
-    name: Prod
-    needs: [deploy-to-uat]
-    if: success() 
-    runs-on: ubuntu-latest
-    environment:
-      name: Prod
-    
-    steps:
-      - name: Set Version
-        run: |
-          version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ github.run_number }}"
-          echo "BUILD_BUILDNUMBER=$version" >> $GITHUB_ENV
-          echo "VERSION=$version" >> $GITHUB_ENV
-          echo "Build version: $version"
-
-      - name: Deploy Octopus Release to Prod
-        uses: OctopusDeploy/deploy-release-action@v3
-        id: start-deploy-to-prod
-        env:
-          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY }}
-          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
-          OCTOPUS_SPACE: ${{ vars.OCTOPUS_SPACE }}
-        with:
-          project: ${{ vars.OCTOPUS_PROJECT }}   
-          release_number: ${{ env.BUILD_BUILDNUMBER }}
-          environments: "Prod"
-
-      - name: Wait for the Prod deployment to complete
-        uses: OctopusDeploy/await-task-action@v3
-        env:
-          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY  }}
-          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
-          OCTOPUS_SPACE: ${{ vars.OCTOPUS_SPACE }}
-        with:
-          server_task_id: ${{ fromJson(steps.start-deploy-to-prod.outputs.server_tasks)[0].serverTaskId }}
-          timeout_after: 1800          
