--- a/.github/workflows/integration-build-feature-branches.yml
+++ b/.github/workflows/integration-build-feature-branches.yml
@@ -2,6 +2,7 @@ name: Integration Build - Branch
 run-name: "1.3.${{ github.run_number }} • ${{ github.event.pull_request.title != '' && github.event.pull_request.title || github.head_ref || github.ref_name }}"
 on:
   pull_request_target:
+    types: [ready_for_review, synchronize]
     branches-ignore: ['master', 'main']
   workflow_dispatch:
 env:
