--- a/.github/workflows/integration-build-feature-branches.yml
+++ b/.github/workflows/integration-build-feature-branches.yml
@@ -1,8 +1,8 @@
 name: Integration Build - Branch
 run-name: "1.3.${{ github.run_number }} • ${{ github.event.pull_request.title != '' && github.event.pull_request.title || github.head_ref || github.ref_name }}"
 on:
-  pull_request_target:
-    types: [ready_for_review, synchronize]
+  push:
+    branches-ignore: ['master', 'main']
   workflow_dispatch:
 env:
   MAJOR_VERSION: 1
@@ -20,6 +20,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+      pull-requests: write
     env:
       BUILD_CONFIGURATION: Release
     
@@ -250,11 +251,28 @@ jobs:
           
           Write-Host ""
           Write-Host "Octopus package publishing summary: $publishedCount published, $failedCount failed"
-          
+
           if ($failedCount -gt 0) {
             Write-Warning "Some packages failed to publish to Octopus Deploy."
           }
-          
+
+      - name: Mark PR as ready for review
+        if: success()
+        env:
+          GH_TOKEN: ${{ secrets.COPILOT_PAT }}
+        run: |
+          # Find PR associated with this branch
+          BRANCH_NAME="${GITHUB_REF#refs/heads/}"
+          echo "Looking for PR from branch: $BRANCH_NAME"
+
+          PR_NUMBER=$(gh pr list --head "$BRANCH_NAME" --state open --json number --jq '.[0].number' 2>/dev/null || echo "")
+
+          if [ -n "$PR_NUMBER" ]; then
+            echo "Found PR #$PR_NUMBER, marking as ready for review..."
+            gh pr ready "$PR_NUMBER" || echo "PR may already be ready or unable to mark ready"
+          else
+            echo "No open PR found for branch $BRANCH_NAME"
+          fi
 
   docker-build-image-for-churchbulletin-ui:
     name: Publish Release Candidate
