OTEL tracing, events, logging, and metrics writtent to Aspire and local file system

--- a/src/UI/Server/UI.Server.csproj
+++ b/src/UI/Server/UI.Server.csproj
@@ -21,6 +21,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\ChurchBulletin.ServiceDefaults\ChurchBulletin.ServiceDefaults.csproj" />
 		<ProjectReference Include="..\..\Core\Core.csproj" />
 		<ProjectReference Include="..\..\DataAccess\DataAccess.csproj" />
 		<ProjectReference Include="..\..\LlmGateway\LlmGateway.csproj" />
