--- a/src/UI/Server/appsettings.Development.json
+++ b/src/UI/Server/appsettings.Development.json
@@ -6,6 +6,13 @@
       "Microsoft.AspNetCore.Mvc": "Warning",
       "Microsoft.AspNetCore.Hosting": "Warning",
       "Microsoft.AspNetCore.StaticFiles": "Warning"
+    },
+    "Console": {
+      "FormatterName": "simple",
+      "FormatterOptions": {
+        "TimestampFormat": "[yyyy-MM-dd HH:mm:ss] ",
+        "IncludeScopes": true
+      }
     }
   },
   "ConnectionStrings": {
@@ -13,5 +20,9 @@
   },
   "ApplicationInsights": {
     "ConnectionString": "InstrumentationKey=586d68ed-85bc-4092-ac8a-fabb7a583e93;IngestionEndpoint=https://centralus-2.in.applicationinsights.azure.com/;LiveEndpoint=https://centralus.livediagnostics.monitor.azure.com/;ApplicationId=5328e763-3c56-4eae-ad66-aa528a92e984"
+  },
+  "LocalTelemetry": {
+    "Enabled": true,
+    "LogDirectory": "logs/telemetry"
   }
 }
