--- a/src/AcceptanceTests/appsettings.acceptancetests.json
+++ b/src/AcceptanceTests/appsettings.acceptancetests.json
@@ -1,9 +1,10 @@
 {
-  "ConnectionStrings": {
-    "SqlConnectionString": "server=(LocalDb)\\MSSQLLocalDB;database=ChurchBulletin;Integrated Security=true;TrustServerCertificate=true;"
-  },
-  "ApplicationBaseUrl": "https://localhost:7174",
-  "StartLocalServer": "true",
-  "SkipScreenshotsForSpeed": "true",
-  "SlowMo": "100"
+    "ConnectionStrings":  {
+                              "SqlConnectionString":  "server=(LocalDb)\\MSSQLLocalDB;database=ChurchBulletin;Integrated Security=true;TrustServerCertificate=true;"
+                          },
+    "ApplicationBaseUrl":  "https://localhost:7174",
+    "StartLocalServer":  "true",
+    "SkipScreenshotsForSpeed":  "true",
+    "SlowMo":  "100",
+    "HeadlessTestBrowser":  "true"
 }
