--- a/.github/workflows/integration-build-feature-branches.yml
+++ b/.github/workflows/integration-build-feature-branches.yml
@@ -85,7 +85,7 @@ jobs:
         with:
           name: test-results-linux
           path: build/test/**/*.trx
-          retention-days: 30
+          retention-days: 2
 
       # Upload code coverage as artifacts
       - name: Upload Code Coverage
@@ -94,7 +94,7 @@ jobs:
         with:
           name: code-coverage-linux
           path: '**/build/test/**/In/**/coverage.cobertura.xml'
-          retention-days: 30
+          retention-days: 2
 
       # Package Everything as NuGet Packages
       - name: Create NuGet Packages
@@ -114,7 +114,7 @@ jobs:
         with:
           name: churchbulletin-nuget-packages
           path: build/*.nupkg
-          retention-days: 90
+          retention-days: 2
 
       - name: Upload build_version.txt artifact
         uses: actions/upload-artifact@v4
@@ -122,7 +122,7 @@ jobs:
         with:
           name: build-version
           path: build_version.txt
-          retention-days: 90
+          retention-days: 2
 
       - name: Publish nupkgs to GitHub Packages
         if: success()
@@ -581,7 +581,7 @@ jobs:
           $env:StartLocalServer = "false"
           $env:TEST_INPUT_DELAY_MS = "${{ env.TEST_INPUT_DELAY_MS }}"
 
-          dotnet test $acceptanceTestProject /p:CopyLocalLockFileAssemblies=true /p:CollectCoverage=true --nologo `
+          dotnet test $acceptanceTestProject /p:CopyLocalLockFileAssemblies=true --nologo `
             --no-restore --logger:trx --results-directory $resultsDirectory --no-build `
             -v $verbosity --configuration ${{ env.BuildConfiguration }} --settings:$runSettingsPath `
             --collect:"XPlat Code Coverage"
@@ -592,4 +592,4 @@ jobs:
         with:
           name: acceptance-test-results-tdd
           path: build/test/AcceptanceTests/**/*.trx
-          retention-days: 30 
+          retention-days: 2 
