--- a/src/ChurchBulletin.AppHost/appsettings.Development.json
+++ b/src/ChurchBulletin.AppHost/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Sql": "server=(LocalDb)\\MSSQLLocalDB;database=ChurchBulletin;Integrated Security=true;TrustServerCertificate=true;",
+    "Ollama": "http://localhost:11434/",
+    "AppInsights": "InstrumentationKey=586d68ed-85bc-4092-ac8a-fabb7a583e93;IngestionEndpoint=https://centralus-2.in.applicationinsights.azure.com/;LiveEndpoint=https://centralus.livediagnostics.monitor.azure.com/;ApplicationId=5328e763-3c56-4eae-ad66-aa528a92e984",
+    "AzureOpenAI": "Endpoint=https://ai-openai-temp-test.openai.azure.com/;Model=gpt-4o-mini"
   }
 }
