--- a/src/UI/Server/appsettings.json
+++ b/src/UI/Server/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "OpenTelemetry": {
-    "ConnectionString": ""
-  }
-  
+  "AllowedHosts": "*"
 }
