Added ability to host test webserver externally, with ability to control whether test data is reloaded on subsequent runs; Added a powershell script to churn the tests repeatedly (10-times by default) to watch for memory leaks.

--- a/src/AcceptanceTests/appsettings.acceptancetests.json
+++ b/src/AcceptanceTests/appsettings.acceptancetests.json
@@ -4,6 +4,7 @@
                           },
     "ApplicationBaseUrl":  "https://localhost:7174",
     "StartLocalServer":  "true",
+    "ReloadTestData": "true",
     "SkipScreenshotsForSpeed":  "true",
     "SlowMo":  "100",
     "HeadlessTestBrowser":  "true"
