--- a/.github/workflows/integration-build-feature-branches.yml
+++ b/.github/workflows/integration-build-feature-branches.yml
@@ -420,7 +420,7 @@ jobs:
       # This will protect deployments - there should be no cancellation.
       group: deploy-to-tdd-serialized
       cancel-in-progress: false
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     environment:
       name: TDD
     
