--- a/src/ChurchBulletin.AppHost/appsettings.Development.json
+++ b/src/ChurchBulletin.AppHost/appsettings.Development.json
@@ -21,6 +21,9 @@
     "Ollama": "Endpoint=http://localhost:11434/;Model=llama3.2",
     "OpenAI": "ApiKey=;Url=;Model="
   },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=586d68ed-85bc-4092-ac8a-fabb7a583e93;IngestionEndpoint=https://centralus-2.in.applicationinsights.azure.com/;LiveEndpoint=https://centralus.livediagnostics.monitor.azure.com/;ApplicationId=5328e763-3c56-4eae-ad66-aa528a92e984"
+  },
   "LocalTelemetry": {
     "Enabled": true,
     "LogDirectory": "logs"
