--- a/src/DataAccess/DataAccess.csproj
+++ b/src/DataAccess/DataAccess.csproj
@@ -10,9 +10,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-
-		<PackageReference Include="MediatR" Version="12.4.1" />
-
+    <PackageReference Include="ClearMeasure.HostedEndpoint.SqlServerTransport" Version="1.0.21" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="10.0.0" />
