--- a/src/UI/Client/UI.Client.csproj
+++ b/src/UI/Client/UI.Client.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Core.csproj" />
+    <ProjectReference Include="..\..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\..\UI.Shared\UI.Shared.csproj" />
   </ItemGroup>
 
