--- a/src/Worker/Worker.csproj
+++ b/src/Worker/Worker.csproj
@@ -15,5 +15,6 @@
   <ItemGroup>
     <ProjectReference Include="..\ChurchBulletin.ServiceDefaults\ChurchBulletin.ServiceDefaults.csproj" />
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\LlmGateway\LlmGateway.csproj" />
   </ItemGroup>
 </Project>
