--- a/src/UI/Server/appsettings.json
+++ b/src/UI/Server/appsettings.json
@@ -8,6 +8,8 @@
   "AllowedHosts": "*",
   "OpenTelemetry": {
     "ConnectionString": ""
-  }
-  
+  },
+  "AI_OpenAI_ApiKey": "",
+  "AI_OpenAI_Url": "https://jeffr-mlq3cayr-swedencentral.services.ai.azure.com",
+  "AI_OpenAI_Model": "gpt-5.2-chat"
 }
