Add LLM tool improvements, MCP refactoring, health check fixes, and acceptance test stabilization
- Add UseFunctionInvocation to Azure OpenAI chat client for tool calling

- Enhance WorkOrderTool descriptions for better LLM discoverability

- Implement ShouldCallEmployeesToolTask integration test

- Refactor McpAcceptanceTestBase into McpTestHelper, remove McpServerFixture

- Extract ProcessCleanupHelper for server teardown with orphan process cleanup

- Fix WorkOrderAIChatTests to wait for AI response element instead of NetworkIdle

- Fix AutoReformatAgentService to read config from IConfiguration not env vars

- Downgrade health check success logs from Information to Debug

- Suppress noisy BrowserRefresh and HealthCheck framework logs in Development

- Add .mcp.json for Visual Studio GitHub Copilot MCP integration

--- a/src/UI/Server/appsettings.Development.json
+++ b/src/UI/Server/appsettings.Development.json
@@ -5,7 +5,10 @@
                                      "Microsoft.AspNetCore":  "Warning",
                                      "Microsoft.AspNetCore.Mvc":  "Warning",
                                      "Microsoft.AspNetCore.Hosting":  "Warning",
-                                     "Microsoft.AspNetCore.StaticFiles":  "Warning"
+                                     "Microsoft.AspNetCore.StaticFiles":  "Warning",
+                                     "Microsoft.AspNetCore.Watch.BrowserRefresh":  "Warning",
+                                     "Microsoft.Extensions.Diagnostics.HealthChecks":  "Warning",
+                                     "ModelContextProtocol":  "Warning"
                                  },
                     "Console":  {
                                     "FormatterName":  "simple",
