--- a/src/UI/Server/appsettings.json
+++ b/src/UI/Server/appsettings.json
@@ -11,5 +11,6 @@
   },
   "AI_OpenAI_ApiKey": "",
   "AI_OpenAI_Url": "https://jeffr-mlq3cayr-swedencentral.services.ai.azure.com",
-  "AI_OpenAI_Model": "gpt-5.2-chat"
+  "AI_OpenAI_Model": "gpt-5.2-chat",
+  "DISABLE_AUTO_REFORMAT_AGENT": "true"
 }
