Address PR review: fix bugs, revert JSON formatting, cross-platform cleanup, test assertions
- Fix extra dollar sign in CanConnectToLlmServerHealthCheck Degraded message

- Remove unused Azure/OpenAI usings from McpTestHelper

- Rename ShouldCallEmployeesToolTask to follow naming convention

- Revert appsettings.test.json to SQLite connection string for CI

- Blank Azure OpenAI URL/model in committed config files

- Revert 4 JSON files to standard 2-space formatting

- Accept Degraded status in health check test assertions

- Remove orphaned launchSettingsPath restore block from build.ps1

- Add cross-platform support to KillProcessOnPort (lsof for Linux/macOS)

- Remove dead process enumeration loop from KillOrphanedServerProcesses

- Guard double dispose in ServerFixture OneTimeTearDown

--- a/src/McpServer/appsettings.json
+++ b/src/McpServer/appsettings.json
@@ -1,5 +1,5 @@
 {
-    "ConnectionStrings":  {
-                              "SqlConnectionString":  "server=(LocalDb)\\MSSQLLocalDB;database=ChurchBulletin;Integrated Security=true;MultipleActiveResultSets=true"
-                          }
+  "ConnectionStrings": {
+    "SqlConnectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=ChurchBulletin;Integrated Security=true;MultipleActiveResultSets=true"
+  }
 }
