--- a/src/UI/Server/appsettings.json
+++ b/src/UI/Server/appsettings.json
@@ -10,7 +10,7 @@
     "ConnectionString": ""
   },
   "AI_OpenAI_ApiKey": "",
-  "AI_OpenAI_Url": "https://jeffr-mlq3cayr-swedencentral.services.ai.azure.com",
-  "AI_OpenAI_Model": "gpt-5.2-chat",
+  "AI_OpenAI_Url": "",
+  "AI_OpenAI_Model": "",
   "DISABLE_AUTO_REFORMAT_AGENT": "true"
 }
