Add AI Agent full-page chat (OpenSpec ai-agent-chat-page)
- Add AgentChatQuery and AgentChatHandler (ChatClientFactory, WorkOrderTool, user-aware prompt)
- Add AiAgent.razor page at /ai-agent: full-height layout, Enter to send, NavMenu link
- Add GetWorkOrdersByCreatorUserName to WorkOrderTool; register in AgentChatHandler
- Unit test: AgentChatHandler with stubbed factory/tool
- Integration test: list work orders by tlovejoy via real LLM round trip (ZDataLoader data)
- Acceptance test: AiAgentChatTests (Playwright)
- OpenSpec: proposal, design, specs, tasks for ai-agent-chat-page

Made-with: Cursor

--- a/src/AcceptanceTests/AcceptanceTests.csproj
+++ b/src/AcceptanceTests/AcceptanceTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net10.0</TargetFramework>
@@ -44,6 +44,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Core\Core.csproj" />
 		<ProjectReference Include="..\IntegrationTests\IntegrationTests.csproj" />
+		<ProjectReference Include="..\UI.Shared\UI.Shared.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
