--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net10.0</TargetFramework>
@@ -50,6 +50,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Core\Core.csproj" />
+		<ProjectReference Include="..\LlmGateway\LlmGateway.csproj" />
 		<ProjectReference Include="..\UI\Client\UI.Client.csproj" />
 		<ProjectReference Include="..\UI\Api\UI.Api.csproj" />
 		<ProjectReference Include="..\UI\Server\UI.Server.csproj" />
